# swandns

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  default.nix  flake.nix  justfile
.gitea/workflows/: build.yaml  release.yaml  test.yaml
.github/workflows/: publish-docker-images.yaml
nix/: client.nix  server.nix  swandns.nix
proto/: swandns.http  swandns.proto
src/: client.rs  config.rs  dns_server.rs  lib.rs  record_repository.rs  split_authority.rs  sqlite_authority.rs  util.rs
src/proto/: mod.rs  swandns.rs
src/rpc_server/: mod.rs  ping.rs  records.rs
tests/: dns_server_test.rs  rpc_server_test.rs
