[package]
name = "swandns"
version = "1.0.1"
edition = "2021"
rust-version = "1.77"

[lib]
name = "swandns"
path = "src/lib.rs"

[[bin]]
name = "swandns"
path = "src/bin/server.rs"

[[bin]]
name = "swandns-update"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
thiserror = "1.0.49"
anyhow = "1.0.75"
tokio-graceful-shutdown = "0.15.0"
confy = { version = "0.6.1", features = ["yaml_conf"], default-features = false }
serde = { version = "1.0.189", features = ["derive"] }
rand = "0.8.5"
tonic = "0.11.0"
prost = "0.12.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio-rusqlite = "0.5.1"
rusqlite_migration = "1.0.2"
platform-dirs = "0.3.0"
time = "0.3.29"
local-ip-address = "0.6.1"
hickory-server = { version = "0.24.0", features = ["resolver", "recursor", "sqlite", "hickory-resolver"] }
async-trait = "0.1.74"
hickory-client = "0.24.0"
tokio-retry = "0.3.0"
chrono = "0.4.31"
figment = { version = "0.10.11", features = [ "env", "yaml" ] }
cron-parser = "0.9.0"
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11.0"

